--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
 					<section data-background-image="img/dartmouth.jpg">
 						<h2 class="bold green3 aligned-left">1956</h2>
 						<h3 class="green3 aligned-left">Dartmouth Conference</h3>
+						<div class="fragment">
+							<a href="https://ojs.aaai.org/aimagazine/index.php/aimagazine/article/view/1904">
+								<img data-src="img/dartmouth2.png">
+							</a>
+						</div>
 					</section>
 
 					<section>
@@ -162,6 +167,10 @@
 				<section>
 					<section>
 						<h3>Generative AI</h3>
+					</section>
+
+					<section>
+						<h3>Generative Pre-trained Transformer (GPT)</h3>
 					</section>
 
 					
