--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>KI Einführung - Juni, 2023</title>
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
@@ -45,9 +45,6 @@
 							MSc in Analytischer Chemie | TU Graz</p>
 						</section>
 
-				</section>
-
-				<section>
 					<section>
 						<h3>Geschichte</h3>
 					</section> 
@@ -85,9 +82,7 @@
 					<section>
 						<img class="r-stretch" src="img/ai-history.png">
 					</section>
-				</section>
 
-				<section>
 					<section>
 						<h3>Terminologie</h3>
 					</section>
@@ -162,9 +157,7 @@
 						<h2 class="aligned-left em03 grey">Animation: <a href="https://upload.wikimedia.org/wikipedia/commons/1/19/2D_Convolution_Animation.gif">Wikipedia</a></h2>
 						<img data-src="img/convolution.gif" alt="">
 					</section>
-				</section>
 
-				<section>
 					<section>
 						<h3>Generative AI</h3>
 					</section>
@@ -172,13 +165,6 @@
 					<section>
 						<h3>Generative Pre-trained Transformer (GPT)</h3>
 					</section>
-
-					
-
-				</section>
-
-				<section>
-
 
 					<section data-background="#fff">
 						<img data-src="img/dogs.jpeg">
@@ -213,9 +199,6 @@
 						<img data-src="img/neural-net.gif" alt="">
 					</section>
 
-				</section>
-
-				<section>
 					<section data-background-image="img/seesaw.jpg">
 						<div class="background">
 							<h2>Bias und AI</h2>
@@ -227,25 +210,25 @@
 							</a>
 						</div>
 					</section>
-				</section>
 
-				<section>
 					<section data-background-image="img/patent.jpg">
 						<h3 class="background">Urheberschaft und AI</h3>
 						<a href="https://thenewstack.io/ai-makes-new-scientific-discoveries-by-analyzing-old-research-papers/">
 							<img src="img/chemistry.png" alt="">
 						</a>
 					</section>
+
+					<section data-markdown>
+						### Weiterführende Literatur & Links
+						- [**Marcus Du Sautoy - The Creativity Code**](https://www.simonyi.ox.ac.uk/books/the-creativity-code/) - Buch über AI und Kreativität
+						- [**Cathy O'Neil - Weapons of Math Destruction**](https://weaponsofmathdestructionbook.com/) - Buch über die gesellschaftlichen Auswirkungen von Algorithmisierung
+						- [**Max Tegmark - Life 3.0: Being Human in the Age of Artificial Intelligence**](https://lexfridman.com/max-tegmark/)
+						- [**3blue1brown - Neural Networks**](https://www.youtube.com/playlist?list=PLZHQObOWTQDNU6R1_67000Dx_ZCJB-3pi) - Hervorragend aufbereitete Reihe an Youtube Videos zum Thema Neuronale Netzwerke
+						- [**xkcd**](https://xkcd.com/) - Online Cartoons eines ehem. Nasa-Ingenieurs, die sich auf humorvoll-intelligente Art und Weise mit Wissenschaft, Technologie und Kommunikation befassen.
+					</section>
 				</section>
 
-				<section data-markdown>
-					### Weiterführende Literatur & Links
-					- [**Marcus Du Sautoy - The Creativity Code**](https://www.simonyi.ox.ac.uk/books/the-creativity-code/) - Buch über AI und Kreativität
-					- [**Cathy O'Neil - Weapons of Math Destruction**](https://weaponsofmathdestructionbook.com/) - Buch über die gesellschaftlichen Auswirkungen von Algorithmisierung
-					- [**Max Tegmark - Life 3.0: Being Human in the Age of Artificial Intelligence**](https://lexfridman.com/max-tegmark/)
-					- [**3blue1brown - Neural Networks**](https://www.youtube.com/playlist?list=PLZHQObOWTQDNU6R1_67000Dx_ZCJB-3pi) - Hervorragend aufbereitete Reihe an Youtube Videos zum Thema Neuronale Netzwerke
-					- [**xkcd**](https://xkcd.com/) - Online Cartoons eines ehem. Nasa-Ingenieurs, die sich auf humorvoll-intelligente Art und Weise mit Wissenschaft, Technologie und Kommunikation befassen.
-				</section>
+
 
 			</div>
 		</div>
