--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
 				<section>
 					<h4 class="aligned-left aligned-top"> Recurrent Neural Networks</h4>
-					<img data-src="img/rnn.png" alt="" height="700">
+					<img data-src="img/rnn.png" alt="" height="500">
 					<small>Source: <a href="https://towardsdatascience.com/introducing-recurrent-neural-networks-f359653d7020">Towards Data Science</a></small>
 				</section>
 
@@ -200,6 +200,18 @@
 
 				<section>
 					<h3>Large Language Models</h3>
+				</section>
+
+				<section>
+					<h3>Embedding</h3>
+					<img data-src="img/emb.png" alt="" >
+				</section>
+
+
+				<section>
+					<h3 class="aligned-left">Transformer Architektur</h3>
+					<h2 class="aligned-left em03 grey"><a href="https://arxiv.org/abs/1706.03762">Vaswani et al. 2017 </a></h2>
+					<img data-src="img/transformer.png" alt="" >
 				</section>
 
 				<section>
