updated slides and handout

--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
 					<h2 class="aligned-left em03  background">Lukas Hutter | 24.06.2023 | ARS Seminar "KI im HR-Management"</h2>
 				</section>
 
+				<section>
+					<h3>
+						<a href="https://github.com/el-uhu/ai-intro-2023/blob/main/2023_06_Ai_Intro-Handout.pdf">
+							Handouts zu den Slides
+						</a>
+					</h3>
+					<img src="img/qrcode.png" alt="">
+				</section>
+
 				<section data-background-image="img/luki-cut.jpg">
 					<p class="aligned-right bold em08 green1">
 						<a href="mailto:lukas.hutter@biotop.co">Lukas Hutter</a>
@@ -43,10 +52,10 @@
 						2005-2012 <br/>
 						MSc in Analytischer Chemie | TU Graz</p>
 					</section>
-
+					
 				<section>
-					<h3>Geschichte</h3>
-				</section> 
+					<h1>Geschichte</h1>
+				</section>
 
 				<section data-background-image="img/turing.jpg">
 					<h2 class="bold green2 aligned-right">1950</h2>
@@ -160,7 +169,7 @@
 
 				<section>
 					<h4 class="aligned-left aligned-top"> Convolutional Neural Networks</h4>
-					<img data-src="img/conv2.png" alt="" height="700">
+					<img data-src="img/conv2.png" alt="">
 					<small>Source: <a href="https://www.researchgate.net/publication/341576780_Object_Detection_and_Image_Segmentation_with_Deep_Learning_on_Earth_Observation_Data_A_Review-Part_I_Evolution_and_Recent_Trends">Hoeser & Kuenzer 2020 Remote Sensing</a></small>
 				</section>
 
@@ -200,32 +209,64 @@
 
 				<section>
 					<h3>Large Language Models</h3>
+					<p>Generative AI Systeme, die Sprache als Input (<i>Prompt</i>) und/oder Output verwenden</p>
+					<small>GPT, LamDA, DALL-E, Midjourney</small>
+				</section>
+
+				<section>
+					<h3>Wie geht AI mit Sprache um?</h3>
 				</section>
 
 				<section>
 					<h3>Embedding</h3>
-					<img data-src="img/emb.png" alt="" >
+					<img data-src="img/emb.png" alt="" height="500px">
 				</section>
 
 
 				<section>
 					<h3 class="aligned-left">Transformer Architektur</h3>
 					<h2 class="aligned-left em03 grey"><a href="https://arxiv.org/abs/1706.03762">Vaswani et al. 2017 </a></h2>
-					<img data-src="img/transformer.png" alt="" >
+					<img data-src="img/transformer.png" alt="" height="500px">
+				</section>
+
+				<section>
+					<h3 class="aligned-left">Attention System</h3>
+					<h2 class="aligned-left em03 grey"><a href="https://arxiv.org/abs/1706.03762">Vaswani et al. 2017 </a></h2>
+					<img data-src="img/attention.gif" alt="">
 				</section>
 
 				<section>
 					<h3>Generative Pre-trained Transformer (GPT)</h3>
+					<ul>
+						<li>basiert auf modifizierter Transformer Architektur und riesigen Trainingsdatenmengen</li>
+						<li>Mehrstufiger Lernprozess: Self-Supervised & Supervised</li>
+						<li>GPT-4 (2023)
+							<ul>
+								<li>
+									etwa 1 Billion Parameter (10x vs GPT-3)
+								</li>
+								
+								<li>
+									Embedding: mehr als 12000 Dimensionen
+							  	</li>
+								<li>
+									kann 25000 Wörter auf einmal verarbeiten (8x vs GPT-3)
+								</li>
+								<li>
+									mutlimodal: "versteht" Text und Bilder
+								</li>
+								<li>
+									kann sich an 64000 Wörter in einer Konversation erinnern (8x vs
+									GPT-3.5)
+								</li>
+							</ul>
+						</li>
+					</ul>
+				</section>
+				<section data-background-image="img/network.jpg">
+					<h2 class="aligned-left">Fragen</h2>
 				</section>
 
-				<section data-markdown>
-					### Weiterführende Literatur & Links
-					- [**Marcus Du Sautoy - The Creativity Code**](https://www.simonyi.ox.ac.uk/books/the-creativity-code/) - Buch über AI und Kreativität
-					- [**Cathy O'Neil - Weapons of Math Destruction**](https://weaponsofmathdestructionbook.com/) - Buch über die gesellschaftlichen Auswirkungen von Algorithmisierung
-					- [**Max Tegmark - Life 3.0: Being Human in the Age of Artificial Intelligence**](https://lexfridman.com/max-tegmark/)
-					- [**3blue1brown - Neural Networks**](https://www.youtube.com/playlist?list=PLZHQObOWTQDNU6R1_67000Dx_ZCJB-3pi) - Hervorragend aufbereitete Reihe an Youtube Videos zum Thema Neuronale Netzwerke
-					- [**xkcd**](https://xkcd.com/) - Online Cartoons eines ehem. Nasa-Ingenieurs, die sich auf humorvoll-intelligente Art und Weise mit Wissenschaft, Technologie und Kommunikation befassen.
-				</section>
 			</div>
 		</div>
 
